# wellsaid-mcp

./: .env_template  .gitignore  LICENSE  README.md  config.json  pyproject.toml
wellsaid_mcp/: ai_director.py  avatars.py  mcp_server.py  requirements.txt  server.py  setup_claude_desktop.py  tts.py  utils.py
